--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -72,7 +72,8 @@ QToolButton#startButton {
 }
 
 QWidget {
-    background-color: rgba(205, 176, 143, 1);
+        background-color: rgba(205, 176, 143, 1);
+
         border-radius: 10px;
 }
 
@@ -97,12 +98,15 @@ QPushButton {
 
 QProgressBar {
         border: 2px rgb(122, 100, 83);
+
         border-radius: 5px;
         text-align: center;
+        font-size: 20px;
+
     }
 
     QProgressBar::chunk {
-        background-color: rgb(159, 134, 109);
+        background-color: rgb(0, 141, 21);
         width: 10px;
     }
 
